Lots of view related stuff.

--- a/app/assets/stylesheets/event.css.scss
+++ b/app/assets/stylesheets/event.css.scss
@@ -1,6 +1,9 @@
 // Place all the styles related to the Event controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.default{
+  content:url("default128.png");
+}
 
 .cycling{
   content:url("cycling128.png");
@@ -10,10 +13,10 @@
   content:url("running128.png");
 }
 
-.boxing{
-  content:url("boxing128.png");
-}
-
 .soccer{
   content:url("soccer128.png");
+}
+
+.boxing{
+  content:url("boxing128.png");
 }
