--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,5 @@
-<h1>Event#edit</h1>
-
-<%= form_for @event do |f| %>
-
+<h1 class="page-header"><%= fa_icon 'pencil' %> Edit Event</h1>
+<%= form_for(@event, class: "form-group") do |f| %>
     <% if @event.errors.any? %>
         <ul>
             <% @event.errors.full_messages.each do |msg| %>
@@ -9,25 +7,38 @@
             <% end %>
         </ul>
     <% end %>
-
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-
-    <%= f.label :description %>
-    <%= f.text_area :description, size: '60x12' %>
     <p>
-        <strong>Sport:</strong>
-        <%= @sport %>
-    </p>
-
-    <%= f.nested_fields_for :spoodle_dates do |ff| %>
-        <%= ff.remove_nested_fields_link 'Remove date' %>
-        <%= ff.label :from %>
-        <%= ff.datetime_select :from %>
-        <%= ff.label :to %>
-        <%= ff.datetime_select :to %>
+    <div><%= f.label :title %><br />
+        <%= f.text_field :title, class: "form-control", autofocus: true %>
+    </div>
+    <% if @event.deadline>Time.now %>
+        <p>
+        <div><%= f.label :deadline %><br />
+            <%= f.datetime_select :deadline, class: "form-control" %></div>
+        </p>
     <% end %>
-    <%= f.add_nested_fields_link :spoodle_dates, 'Add more dates' %>
+    <p>
+    <div><%= f.label :description %><br />
+        <%= f.text_area :description, size: '60x5', class: "form-control" %>
+    </div>
+    </p>
+    <p>
+    <div><%= f.label :dates %><br />
+        <%= f.nested_fields_for :spoodle_dates do |ff| %>
+            <%= ff.label :from %>
+            <%= ff.datetime_select :from %>
+            <%= ff.label :to %>
+            <%= ff.datetime_select :to %>
+            <%= ff.remove_nested_fields_link fa_icon 'times' %>
+        <% end %>
 
-    <%= f.submit 'Update' %>
+        <%= f.add_nested_fields_link :spoodle_dates, 'Add a date' %>
+    </div>
+    </p>
+    <div style="float: left; width: auto;">
+        <div><%= f.submit "Update", class: "btn btn-success" %></div>
+    </div>
 <% end %>
+<div style="float: right; width: auto;">
+    <%= button_to 'Discard', unauthenticated_root_path, method: :get, class: "btn btn-warning" %>
+</div>
