--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header">Edit <%= resource_name.to_s.humanize %></h1>
+<h1 class="page-header"><%= fa_icon 'gear' %> Settings</h1>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-group", html: { method: :put }) do |f| %>
     <%= devise_error_messages! %>
     <p>
