--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 <div class="media">
     <a class="media-left">
-        <img class="<%= @sport.downcase %>"/>
+        <img class="default <%= @sport.downcase %>"/>
     </a>
     <div class="media-body">
         <p>
@@ -26,7 +26,7 @@
 </div>
 
 <hr>
-<h3>Invited</h3>
+<h3>Invited Users</h3>
 
     <%= render @event.invitations %>
 
@@ -34,7 +34,7 @@
         <%= image_tag("plus.png") %>
     <% end %>
 <hr>
-<h3>Dates</h3>
+<h3>Proposed Dates</h3>
 <div class="row">
 <%= render @event.spoodle_dates %>
 </div>
