--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,8 @@
     </div>
     <p>
         <div><%= f.label :email %><br />
-            <%= f.email_field :email, class: "form-control" %></div>
+            <%= f.email_field :email, class: "form-control" %>
+        </div>
     </p>
     <p>
         <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
