--- a/app/views/events/passed.html.erb
+++ b/app/views/events/passed.html.erb
@@ -6,7 +6,7 @@
     </div>
 <% end %>
 <% if @passed_events %>
-    <%= form_tag events_path, method: :get do %>
+    <%= form_tag passed_events_path, method: :get do %>
         <div class="form-group">
             <div class="input-group">
                 <%= text_field_tag :search, params[:search], placeholder: "Search Events", class: "form-control" %>
