--- a/app/views/layouts/guest.html.erb
+++ b/app/views/layouts/guest.html.erb
@@ -62,13 +62,12 @@
             </div>
         </div>
 
-        <hr>
-
         <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <hr>
+                    <p>Copyright &copy; Spoodle Inc. 2014. Visit us on <a href="https://github.com/ASE-2014"><%= fa_icon 'github' %> GitHub</a>!</p>
                 </div>
             </div>
             <!-- /.row -->
