--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-group", html: { method: :put }) do |f| %>
     <%= devise_error_messages! %>
     <p>
-        <div><%= f.label :email %><br />
+        <div><%= f.label :email %>
             <%= f.email_field :email, class: "form-control", autofocus: true %>
         </div>
     </p>
@@ -12,17 +12,17 @@
         <% end %>
     </p>
     <p>
-        <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+        <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
             <%= f.password_field :password, class: "form-control", autocomplete: "off" %>
         </div>
     </p>
     <p>
-        <div><%= f.label :password_confirmation %><br />
+        <div><%= f.label :password_confirmation %>
             <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
         </div>
     </p>
     <p>
-        <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+        <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
             <%= f.password_field :current_password, class: "form-control", autocomplete: "off" %>
         </div>
     </p>
