--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,21 +2,21 @@
 <%= form_for(resource, as: resource_name, class: "form-group", url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
     <p>
-    <div><%= f.label :username %><br />
+    <div><%= f.label :username %>
         <%= f.text_field :username, class: "form-control", autofocus: true %>
     </div>
     <p>
-        <div><%= f.label :email %><br />
+        <div><%= f.label :email %>
             <%= f.email_field :email, class: "form-control" %>
         </div>
     </p>
     <p>
-        <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+        <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %>
             <%= f.password_field :password, class: "form-control", autocomplete: "off" %>
         </div>
     </p>
     <p>
-        <div><%= f.label :password_confirmation %><br />
+        <div><%= f.label :password_confirmation %>
             <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
         </div>
     </p>
