--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -2,14 +2,14 @@
 <%= form_for(@event, class: "form-group") do |f| %>
     <% if @event.errors.any? %>
         <% @event.errors.full_messages.each do |msg| %>
-            <div class="alert alert-dismissable alert-info">
+            <div class="alert alert-dismissable alert-danger">
                 <button type="button" class="close" data-dismiss="alert">×</button>
                 <%= msg %>
             </div>
         <% end %>
     <% end %>
     <p>
-        <div><%= f.label :title %><br />
+        <div><%= f.label :title %>
             <%= f.text_field :title, class: "form-control", autofocus: true %>
         </div>
     </p>
@@ -21,7 +21,7 @@
         </p>
     <% end %>
     <p>
-        <div><%= f.label :description %><br />
+        <div><%= f.label :description %>
             <%= f.text_area :description, size: '60x5', class: "form-control" %>
         </div>
     </p>
