--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -9,11 +9,11 @@
         <% end %>
     <% end %>
     <p>
-        <div><%= f.label :title %><br />
+        <div><%= f.label :title %>
             <%= f.text_field :title, class: "form-control", autofocus: true %>
         </div>
     <p>
-        <div><%= f.label :activity %><br />
+        <div><%= f.label :activity %>
             <%= f.collection_select(:sport_id, @sports, :last, :first, {selected: @sport_id}, class: "form-control") %>
         </div>
     </p>
@@ -23,7 +23,7 @@
         </div>
     </p>
     <p>
-        <div><%= f.label :description %><br />
+        <div><%= f.label :description %>
             <%= f.text_area :description, size: '60x5', class: "form-control" %>
         </div>
     </p>
