--- a/app/views/events/pending.html.erb
+++ b/app/views/events/pending.html.erb
@@ -9,7 +9,7 @@
     <%= form_tag pending_events_path, method: :get do %>
         <div class="form-group">
             <div class="input-group">
-                <%= text_field_tag :search, params[:search], placeholder: "Search Events", class: "form-control" %>
+                <%= text_field_tag :search, params[:search], placeholder: "Filter", class: "form-control" %>
                 <span class="input-group-btn">
                     <%= button_tag( :class => "btn btn-default") do %>
                         <i class="fa fa-search"></i>
