--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,21 +23,21 @@
             <!-- Set the first background image using inline CSS below. -->
             <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
             <div class="carousel-caption">
-                <h2>Caption 1</h2>
+                <h2>The Sports Doodle!</h2>
             </div>
         </div>
         <div class="item">
             <!-- Set the second background image using inline CSS below. -->
             <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
             <div class="carousel-caption">
-                <h2>Caption 2</h2>
+                <h2>Create Events that suit everyone!</h2>
             </div>
         </div>
         <div class="item">
             <!-- Set the third background image using inline CSS below. -->
             <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
             <div class="carousel-caption">
-                <h2>Caption 3</h2>
+                <h2>Exercise and compete with all your Friends! </h2>
             </div>
         </div>
     </div>
@@ -54,9 +54,12 @@
 
 <!-- Page Content -->
 <div class="container">
-
     <div class="row">
         <div class="col-lg-12">
-            <h1>Welcome#index</h1>
-            <p>Find me in app/views/welcome/index.html.erb</p>
-
+            <h1 class="page-header"><%= fa_icon "trophy" %> <b>SPOODLE</b></h1>
+            <% flash.each do |name, msg| %>
+                <div class="alert alert-dismissable alert-info">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <%= msg %>
+                </div>
+            <% end %>
