--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 <div class="media">
     <a class="media-left">
-        <img class="default <%= @sport.downcase %>"/>
+        <img class="default <%= @event.sport.name.downcase %>"/>
     </a>
     <div class="media-body">
         <p>
