--- a/app/assets/stylesheets/event.css.scss
+++ b/app/assets/stylesheets/event.css.scss
@@ -20,3 +20,13 @@
 .boxing{
   content:url("boxing128.png");
 }
+
+#examples a {
+  text-decoration: underline;
+}
+
+.map_canvas {
+  width: 100%;
+  height: 400px;
+  margin: 10px 20px 10px 0;
+}
