--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -23,6 +23,19 @@
         </div>
     </p>
     <p>
+    <div><%= f.label :location %><br />
+        <%= f.text_field :location, id: "geocomplete", placeholder: "Enter a Location", class: "form-control" %>
+    </div>
+    </p>
+            <%= f.hidden_field :longitude %>
+            <%= f.hidden_field :latitude %>
+        <label>Latitude</label>
+        <input name="event[latitude]" type="text" value="">
+
+        <label>Longitude</label>
+        <input name="event[longitude]" type="text" value="">
+    <div class="map_canvas"></div>
+    <p>
         <div><%= f.label :description %>
             <%= f.text_area :description, size: '60x5', class: "form-control" %>
         </div>
@@ -56,3 +69,28 @@
 <div style="float: right; width: auto;">
     <%= button_to 'Discard', unauthenticated_root_path, method: :get, class: "btn btn-warning" %>
 </div>
+<script>
+    $(function(){
+        $("#geocomplete").geocomplete({
+            map: ".map_canvas",
+            details: "form",
+            types: ["geocode"],
+            markerOptions: {
+                draggable: true
+            }
+        });
+
+        $("#geocomplete").bind("geocode:dragged", function(event, latLng){
+            $("input[name='event[latitude]']").val(latLng.lat());
+            $("input[name='event[longitude]']").val(latLng.lng());
+            $("#reset").show();
+        });
+
+        $("#find").click(function(){
+            $("#geocomplete").trigger("geocode");
+            $.proxy(this.markerDragged, this)
+        });
+
+
+    });
+</script>
