--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -33,16 +33,9 @@
     <div id="examples">
         <p>    Examples:
             <a href="#">Bern</a>
-            <a href="#">Hochschulstrasse 4, Bern</a></p>
+            <a href="#">Hochschulstrasse 4, Bern</a>
+        </p>
     </div>
-    <%= f.hidden_field :longitude %>
-    <%= f.hidden_field :latitude %>
-    <!-- <label>Latitude</label>
-        <input name="event[latitude]" type="text" value="">
-
-        <label>Longitude</label>
-        <input name="event[longitude]" type="text" value="">
-        -->
     <div class="map_canvas"></div>
     <p>
         <div><%= f.label :dates %><br />
@@ -63,6 +56,9 @@
 <div style="float: right; width: auto;">
     <%= button_to 'Discard', @event, method: :get, class: "btn btn-warning" %>
 </div>
+<br/>
+<br/>
+<br/>
 <script>
     $(function(){
         $("#geocomplete").geocomplete({
@@ -73,17 +69,10 @@
             }
         });
 
-        $("#geocomplete").bind("geocode:dragged", function(event, latLng){
-            $("input[name='event[latitude]']").val(latLng.lat());
-            $("input[name='event[longitude]']").val(latLng.lng());
-            $("#reset").show();
-        });
-
         $("#find").click(function(){
             $("#geocomplete").trigger("geocode");
             $.proxy(this.markerDragged, this)
         });
-
 
         $("#examples a").click(function(){
             $("#geocomplete").val($(this).text()).trigger("geocode");
