Polishing maps integration.

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -64,6 +64,7 @@
         $("#geocomplete").geocomplete({
             map: ".map_canvas",
             details: "form",
+            location: "<%= @event.location %>",
             types: ["geocode"],
             markerOptions: {
             }
