--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,10 @@
-<h1>lol</h1>
-
+<h1>Users list</h1>
+<% flash.each do |name, msg| %>
+    <div class="alert alert-dismissable alert-info">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      <%= msg %>
+    </div>
+<% end %>
 <%= form_tag users_path, method: :get do %>
     <div class="form-group">
       <div class="input-group">
@@ -27,11 +32,10 @@
         <tr>
           <td><%= link_to user.username, user_path(user) %></td>
           <td><%= user.email %></td>
-          <td><%= form_tag new_friend_path, method: :get do %>
-                <%= button_tag( :class => "btn btn-default") do %>
-                  <i class="fa fa-search"></i>
-                <% end %>
-              <% end %>
+          <td>
+            <% if(! current_user.friends.exists?(user.id)) %>
+                <%= button_to "Add friend", friendships_path(:friend_id => user), :method => "post", class: "btn btn-success" %>
+            <% end %>
           </td>
         </tr>
     <% end %>
