--- a/app/assets/stylesheets/event.css.scss
+++ b/app/assets/stylesheets/event.css.scss
@@ -21,6 +21,26 @@
   content:url("boxing128.png");
 }
 
+.default64{
+  content:url("default64.png");
+}
+
+.cycling64{
+  content:url("cycling64.png");
+}
+
+.running64{
+  content:url("running64.png");
+}
+
+.soccer64{
+  content:url("soccer64.png");
+}
+
+.boxing64{
+  content:url("boxing64.png");
+}
+
 #examples a {
   text-decoration: underline;
 }
