--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,82 +5,116 @@
         <%= msg %>
     </div>
 <% end %>
-</div>
-<div class="col-lg-6 media">
-    <a class="media-left">
-        <img class="default <%= @event.sport.name.downcase %>"/>
-    </a>
-    <div class="media-body">
-        <p>
-            <%= @event.is_deadline_over? ? (@event.is_passed? ? 'Passed ' : 'Upcoming ') : "Pending " %>
-            <%= @event.sport.name %> event by <%= link_to @event.owner.username, @event.owner %>.
-            <br><%= @event.is_deadline_over? ? "" : "You can assign to the proposed dates until "+@event.deadline.strftime("%A, %d. %B %Y at %R.") %>
-        </p>
-        <strong>Description: </strong><%= @event.description %>
-    </div>
-</div>
-<div class="col-lg-6">
-    <form>
-        <input id="geocomplete" type="hidden" />
-    </form>
 
-    <div class="map_canvas show"></div>
-</div>
-<div class="col-lg-12">
-    <hr>
-    <% unless @event.is_deadline_over? %>
-        <h3>Invited Users</h3>
-        <%= render @event.invitations %>
-        <%= link_to new_event_invitation_path(@event) do %>
-            <%= image_tag("plus.png") %>
-        <% end %>
+<a class="media-left hidden-xs">
+    <img class="media-object default <%= @event.sport.name.downcase %> hidden-xs hidden-sm"/>
+    <img class="default64 <%= @event.sport.name.downcase %>64 visible-xs visible-sm"/>    </a>
+<div class="media-body">
+
+    <% if @event.is_upcoming? %>
+        <div class="panel panel-primary">
+            <div class="panel-body">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <p>Starts:</p>
+                    <h3 class="media-heading">
+                        <small><%= fa_icon 'calendar fw' %></small> <%= @event.definitive_date.from.strftime("%a, %d. %b %Y") %>
+                    </h3>
+                    <h3 class="media-heading">
+                        <small><%= fa_icon 'clock-o fw' %></small> <%= @event.definitive_date.from.strftime("%T") %>
+                    </h3>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <p>Ends:</p>
+                    <h3 class="media-heading">
+                        <small><%= fa_icon 'calendar fw' %></small> <%= @event.definitive_date.to.strftime("%a, %d. %b %Y") %>
+                    </h3>
+                    <h3 class="media-heading">
+                        <small><%= fa_icon 'clock-o fw' %></small> <%= @event.definitive_date.to.strftime("%T") %>
+                    </h3>
+                </div>
+            </div>
+        </div>
     <% end %>
-    <% if @event.is_deadline_over? %>
-        <h3>Participants</h3>
-        <% @event.participants.each do |user| %>
-            <%= link_to user_path(user) do %>
-                <%= image_tag("profile.png") %>
+    <p>
+        <% if @event.is_deadline_over? %>
+            <% if @event.is_passed? %>
+                <%= fa_icon 'folder fw' %> Passed
+            <% else %>
+                <%= fa_icon 'calendar fw' %> Upcoming
             <% end %>
+        <% else %>
+            <%= fa_icon 'folder fw' %> Pending
+        <% end %> |
+        <%= @event.sport.name %> |
+        <%= fa_icon 'user fw' %> by <%= link_to @event.owner, user_path(@event.owner) %>
+    </p>
+    <p><%= @event.description %></p>
+</div>
+<hr>
+<h3> <%= fa_icon 'map-marker' %> Location</h3>
+<p><%= @event.location %></p>
+<form>
+    <input id="geocomplete" type="hidden" />
+</form>
+
+<div class="map_canvas show"></div>
+<hr>
+<% unless @event.is_deadline_over? %>
+    <h3><%= fa_icon 'users fw' %> Invited Users</h3>
+    <%= render @event.invitations %>
+    <%= link_to new_event_invitation_path(@event) do %>
+        <%= image_tag("plus.png") %>
+    <% end %>
+<% end %>
+<% if @event.is_deadline_over? %>
+    <h3><%= fa_icon 'users fw' %> Participants</h3>
+    <% if @event.participants.empty? %>
+    <p>Nobody wants to participate <%= fa_icon 'frown-o' %></p>
+    <% else %>
+    <% @event.participants.each do |user| %>
+        <%= link_to user_path(user) do %>
+            <%= image_tag("profile.png") %>
         <% end %>
     <% end %>
+    <% end %>
+<% end %>
+<hr>
+<% unless @event.is_deadline_over? %>
+    <h3><%= fa_icon 'calendar fw' %> Proposed Dates</h3>
+    <p>You can assign to the proposed dates until <%= @event.deadline.strftime("%A, %d. %B %Y at %R.") %>
+    <div class="row">
+        <%= render @event.spoodle_dates %>
+    </div>
     <hr>
-    <% unless @event.is_deadline_over? %>
-        <h3>Proposed Dates</h3>
-        <div class="row">
-            <%= render @event.spoodle_dates %>
-        </div>
-        <hr>
-    <% end %>
-    <% if (@event.is_deadline_over? and @event.is_passed?) %>
-        <h3>Event Data</h3>
-        <div class="row">
-            <%= @event.event_data %>
-        </div>
-        <hr>
-    <% end %>
-    <% if @event.belongs_to?(current_user) %>
-        <div style="float: left; width: auto;">
-            <%= button_to 'Edit Event', edit_event_path(@event), method: :get, class: "btn btn-info" %>
-        </div>
-        <div style="float: left; width: auto;">
-            <p>&nbsp;</p>
-        </div>
-        <div style="float: left; width: auto;">
-            <%= button_to 'Delete Event', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
-        </div>
-        <br/>
-        <br/>
-        <br/>
-    <% end %>
-    <script>
-        $(function(){
+<% end %>
+<% if (@event.is_deadline_over? and @event.is_passed?) %>
+    <h3><%= fa_icon 'bar-chart fw' %> Event Data</h3>
+        <%= @event.event_data %>
+    <hr>
+<% end %>
+<% if @event.belongs_to?(current_user) %>
+    <div style="float: left; width: auto;">
+        <%= button_to 'Edit Event', edit_event_path(@event), method: :get, class: "btn btn-info" %>
+    </div>
+    <div style="float: left; width: auto;">
+        <p>&nbsp;</p>
+    </div>
+    <div style="float: left; width: auto;">
+        <%= button_to 'Delete Event', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
+    </div>
+    <br/>
+    <br/>
+    <br/>
+<% end %>
+<script>
+    $(function(){
 
-            var options = {
-                map: ".map_canvas",
-                location: "<%= @event.location %>"
-            };
+        var options = {
+            map: ".map_canvas",
+            location: "<%= @event.location %>"
+        };
 
-            $("#geocomplete").geocomplete(options);
+        $("#geocomplete").geocomplete(options);
 
-        });
-    </script>
+    });
+</script>
