--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
             </li>
 
             <li>
-                <a href="#"><i class="fa fa-line-chart fa-fw"></i> Data Center</a>
+                <a href="#"><i class="fa fa-bar-chart fa-fw"></i> Data Center</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-trophy fa-fw"></i> Global Toplist</a>
