Extended seeds and improved views.

--- a/app/assets/stylesheets/event.css.scss
+++ b/app/assets/stylesheets/event.css.scss
@@ -54,3 +54,14 @@
 .show {
   height: 300px;
 }
+
+.spoodle-date {
+  height: 220px;
+}
+
+.no-margin {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
