--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Users list</h1>
+<h1 class="page-header"><%= fa_icon 'users' %> Users</h1>
 <% flash.each do |name, msg| %>
     <div class="alert alert-dismissable alert-info">
       <button type="button" class="close" data-dismiss="alert">×</button>
