Dates of an event can't be edited after deadline.

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -13,7 +13,7 @@
             <%= f.text_field :title, class: "form-control", autofocus: true %>
         </div>
     </p>
-    <% if @event.deadline>Time.now %>
+    <% unless @event.is_deadline_over? %>
         <p>
             <div><%= f.label :deadline %><br />
                 <%= f.datetime_select :deadline, class: "form-control" %>
@@ -37,18 +37,20 @@
         </p>
     </div>
     <div class="map_canvas"></div>
-    <p>
-        <div><%= f.label :dates %><br />
-            <%= f.nested_fields_for :spoodle_dates do |ff| %>
-                <%= ff.label :from %>
-                <%= ff.datetime_select :from %>
-                <%= ff.label :to %>
-                <%= ff.datetime_select :to %>
-                <%= ff.remove_nested_fields_link fa_icon 'times' %>
-            <% end %>
-            <%= f.add_nested_fields_link :spoodle_dates, 'Add a date' %>
-        </div>
-    </p>
+    <% unless @event.is_deadline_over? %>
+        <p>
+            <div><%= f.label :dates %><br />
+                <%= f.nested_fields_for :spoodle_dates do |ff| %>
+                    <%= ff.label :from %>
+                    <%= ff.datetime_select :from %>
+                    <%= ff.label :to %>
+                    <%= ff.datetime_select :to %>
+                    <%= ff.remove_nested_fields_link fa_icon 'times' %>
+                <% end %>
+                <%= f.add_nested_fields_link :spoodle_dates, 'Add a date' %>
+            </div>
+        </p>
+    <% end %>
     <div style="float: left; width: auto;">
         <div><%= f.submit "Update", class: "btn btn-success" %></div>
     </div>
