--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,9 +95,9 @@
                 <a href="#"><i class="fa fa-trophy fa-fw"></i> Global Toplist</a>
             </li>
             <li>
-            <%= link_to user_path(current_user.id) do %>
-                <%= fa_icon 'user fw' %> Profile
-            <% end %>
+                <%= link_to users_path do %>
+                  <%= fa_icon 'users fw' %> Users
+                <% end %>
             </li>
         </ul>
     </div>
