--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,7 +33,7 @@
           <td><%= link_to user.username, user_path(user) %></td>
           <td><%= user.email %></td>
           <td>
-            <% if(! current_user.friends.exists?(user.id)) %>
+            <% unless current_user.friends.exists?(user) %>
                 <%= button_to "Add friend", friendships_path(:friend_id => user), :method => "post", class: "btn btn-success" %>
             <% end %>
           </td>
