--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Spoodle</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
