--- a/app/assets/stylesheets/event.css.scss
+++ b/app/assets/stylesheets/event.css.scss
@@ -47,11 +47,11 @@
 
 .map_canvas {
   width: 100%;
-  height: 400px;
+  height: 600px;
   margin: 10px 20px 10px 0;
 }
 
-.show {
+.location {
   height: 300px;
 }
 
@@ -64,10 +64,4 @@
   margin-bottom: 0px;
   padding-top: 0px;
   padding-bottom: 0px;
-}
-
-#map-canvas {
-  height: 100%;
-  margin: 0px;
-  padding: 0px
 }
