--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Spoodle</title>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="http://geoxml3.googlecode.com/svn/branches/polys/geoxml3.js"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= favicon_link_tag %>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -17,8 +18,7 @@
 
     <%= csrf_meta_tags %>
 </head>
-<body>
-
+<body onload="initialize();">
 <div id="wrapper">
 
 <!-- Navigation -->
